--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 description = "CUDA extension for PPISP"
 requires-python = ">=3.10"
 dependencies = ["torch"]
-license = "Apache-2.0"
+license = { file = "LICENSE" }
 readme = "README.md"
 authors = [
     { name = "NVIDIA Corporation" },
