--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "ppisp"
 version = "1.0.0"
 description = "CUDA extension for PPISP"
 requires-python = ">=3.10"
-dependencies = ["torch"]
+dependencies = ["torch", "matplotlib", "numpy"]
 license = { file = "LICENSE" }
 readme = "README.md"
 authors = [
